@@ -683,6 +683,12 @@ cupt installs recommended packages by default, this option cancels described beh
 
 Corresponding configuration option: L<apt::install-recommends>
 
+=item --show-archives,-A
+
+when displaying actions preview prompt, display also release archives for each package
+
+Corresponding configuration option: L<cupt::console::actions-preview::show-archives>
+
 =item --show-versions,-V
 
 when displaying actions preview prompt, display also versions of packages
